# DeepInsight-Blackwell

./: .gitignore  BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  download_dependencies.ps1  download_dependencies.sh
src/: HardwareMonitor.cpp  HardwareMonitor.h  ImGuiApp.cpp  ImGuiApp.h  main.cpp
